--- a/locaties.html
+++ b/locaties.html
@@ -24,10 +24,10 @@
             </a>
         </div>
         <section class="c-page">
-            <h2>Naar waar wilt u?</h2>
+            <h2 class="c-bottommargin">Naar waar wilt u?</h2>
             <div class="c-button-flex">
                 <a href="volgen.html">
-                    <button class="c-button c-buttonmargin">Onthaal</button>
+                    <button class="c-button">Onthaal</button>
                 </a>
                 <a href="volgen.html">
                     <button class="c-button">Sportscube</button>
