--- a/omkleden.html
+++ b/omkleden.html
@@ -24,10 +24,10 @@
             </a>
         </div>
         <section class="c-page">
-            <h2>Moet u zich nog omkleden?</h2>
+            <h2 class="c-bottommargin">Moet u zich nog omkleden?</h2>
             <div class="c-button-flex">
                 <a href="volgen.html">
-                    <button class="c-button c-buttonmargin">Ja</button>
+                    <button class="c-button">Ja</button>
                 </a>
                 <a href="volgen.html">
                     <button class="c-button">Nee</button>
