--- a/terugroepen.html
+++ b/terugroepen.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <section class="c-page">
-            <h2>klik op onderstaande knop om Temi terug te roepen...</h2>
+            <h2 class="c-bottommargin">klik op onderstaande knop om Temi terug te roepen...</h2>
             <div class="c-button-flex">
                 <a href="onderweg.html">
                     <button class="c-button c-call">Roep Temi!</button>
