--- a/Admin-webapp/bezoeker_hulp.html
+++ b/Admin-webapp/bezoeker_hulp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="This is my HTML5 boilerplate.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temi locatie</title>
+    <title>Hulp bezoeker</title>
     <link rel="stylesheet" href="/Style/normalize.css">
     <link rel="stylesheet" href="/Style/screen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,20 +31,20 @@
             </svg>
         </div>
         <div class="c-message">
-            <p>Temi bevindt zich nu op dit plaats</p>
+            <p>Bezoeker vraagt hulp...</p>
         </div>
         <div class="c-map">
             <svg xmlns="http://www.w3.org/2000/svg" width="248" height="271" viewBox="0 0 248 271">
-                <g id="Group_193" data-name="Group 193" transform="translate(-56 -212)">
+                <g id="Group_194" data-name="Group 194" transform="translate(-56 -212)">
                   <g id="Rectangle_2" data-name="Rectangle 2" transform="translate(56 212)" fill="#fff" stroke="#707070" stroke-width="1">
                     <rect width="248" height="271" stroke="none"/>
                     <rect x="0.5" y="0.5" width="247" height="270" fill="none"/>
                   </g>
-                  <line id="Line_1" data-name="Line 1" x2="21" y2="19" transform="translate(125 310.5)" fill="none" stroke="red" stroke-width="1"/>
-                  <line id="Line_2" data-name="Line 2" x1="21" y2="19" transform="translate(125 310.5)" fill="none" stroke="red" stroke-width="1"/>
+                  <line id="Line_1" data-name="Line 1" x2="21" y2="19" transform="translate(231.5 256.5)" fill="none" stroke="red" stroke-width="1"/>
+                  <line id="Line_2" data-name="Line 2" x1="21" y2="19" transform="translate(231.5 256.5)" fill="none" stroke="red" stroke-width="1"/>
                   <text id="Map" transform="translate(180 352)" fill="#5f5f5f" font-size="14" font-family="AvenirLTStd-Roman, Avenir LT Std"><tspan x="-14.259" y="0">Map</tspan></text>
                 </g>
-              </svg>
+              </svg>              
         </div>
         <div class="c-button-flex">
             <button class="c-button"><a href="/Admin-webapp/index.html">Terug</a></button>
