--- a/gearriveerd.html
+++ b/gearriveerd.html
@@ -36,15 +36,16 @@
       </div>
       <section class="c-page">
         <h2>Gearriveerd!</h2>
-        <a href="terugroepen.html">
-          <img class="c-image" src="img/png/v.png" />
-        </a>
+        <svg class="c-done" xmlns="http://www.w3.org/2000/svg" transform="skewX(30)" viewBox="0 0 48 48" width="240px" height="240px">
+          <animateTransform attributeName="transform" type="scale" from="0 0" to="1 1" begin="0s" dur="2s" fill="freeze"></animateTransform>/>
+          <path fill="#22ce99" d="M40.6 12.1L17 35.7 7.4 26.1 4.6 29 17 41.3 43.4 14.9z"/>
+        </svg>
       </section>
     </main>
     <script>
         setTimeout(function(){
            window.location.href = 'terugroepen.html';
-        }, 3000);
+        }, 2000);
      </script>
   </body>
 </html>
