--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="Style/normalize.css" />
     <link rel="stylesheet" href="Style/screen.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="/script/robot.js"></script>
+    <script src="script/robot.js"></script>
 </head>
 <body>
     <main class="c-app">
