--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <a href="qr-code.html">
             <section class="c-page">
-                <h2>Klik op het scherm om te starten...</h2>
+                <h2 class="js-text">Klik op het scherm om te starten...</h2>
                 <svg class="c-robot js-robot" id="Robot_master" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 120">
                     <title>MCT Robot</title>
                     <ellipse class="c-robot__shadow" id="Shadow" cx="49.88" cy="118" rx="18" ry="2"/>
