--- a/old pages/index.html
+++ b/old pages/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="Style/normalize.css" />
     <link rel="stylesheet" href="Style/screen.css" />
+    <script src="script/app.js"></script>
 </head>
 <body>
     <main class="c-app">
